--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ul>
+		<li><img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Golden_Retriever_Dukedestiny01_drvd.jpg"></li>
+		<li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg"></li>
+		<li><img src="https://en.wikipedia.org/wiki/Golden_Retriever"></li>
+		<li><img src="https://en.wikipedia.org/wiki/Poodle"></li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
