--- a/main.html
+++ b/main.html
@@ -9,10 +9,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ul>
-		<li><img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Golden_Retriever_Dukedestiny01_drvd.jpg"></li>
-		<li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg"></li>
-		<li><img src="https://en.wikipedia.org/wiki/Golden_Retriever"></li>
-		<li><img src="https://en.wikipedia.org/wiki/Poodle"></li>
+		<li><a href="https://upload.wikimedia.org/wikipedia/commons/b/bd/Golden_Retriever_Dukedestiny01_drvd.jpg"></a></li>
+		<li><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg"></a></li>
+		<li><a href="https://en.wikipedia.org/wiki/Golden_Retriever"></a></li>
+		<li><a href="https://en.wikipedia.org/wiki/Poodle"></a></li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
